tests/cases/field_unknown_attr.stderr
error: Unknown field attribute
 --> tests/cases/field_unknown_attr.rs:5:25
  |
5 |     #[field(bit_len(4), asdf_qwer(10))]
  |                         ^^^^^^^^^
